# fastapi-project

./: .dockerignore  .env.example  alembic.ini  db.sqlite3  pyproject.toml  pytest.ini
docker/: Dockerfile  docker-compose.yml
migrations/: env.py
migrations/versions/: 2023_09_17_1847-dad224afde56_create_tables.py
src/: app.py  config.py  db.py  db_manager.py  main.py
src/api/: __init__.py
src/api/profiles/: crud.py  dependencies.py  router.py  shemas.py
src/api/users/: auth.py  crud.py  router.py  schemas.py  user_manager.py  utils.py
src/models/: __init__.py  base.py  profile.py  user.py
tests/: conftest.py  test_api.py
