[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["Giminosk <giminosk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.1"}
pydantic = {extras = ["email"], version = "^2.3.0"}
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
#aiosqlite = "^0.19.0"
bcrypt = "^4.0.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
